practica-kb/03-kb-dp-ingress.yaml
#T* Deployment
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kb
  labels:
    run: kb

spec:
  replicas: 1
  selector:
    matchLabels:
      run: kb
  
  template:
    metadata:
      generateName: kb
      labels:
        run: kb
    
    spec:
      containers:
        - name: kanboard
          image: kanboard/kanboard:v1.2.9
          imagePullPolicy: Always
          
          ports:
            - name: kb
              containerPort: 80
---
#T* Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  name: web
spec:
  rules:
  - host: guarnier-kb-web.my.kube.um.edu.ar
    http:
      paths:
      - backend:
          service:
            name: kb
            port:
              number: 80
        path: /
        pathType: Prefix

---
#T* Service
apiVersion: v1
kind: Service
metadata:
  name: kb
  labels:
    run: kb

spec:
  selector:
    run: kb

  ports:
    - port: 80
      name: kb
      targetPort: 80
